HTML listbox is not resized horizontally when zooming https://bugs.webkit.org/show_bug.cgi?id=20445

Reviewed by Darin Adler.

Source/WebCore:

If any style changes happens on a HTMLSelectElement, we need to set the m_optionsChanged property
of its renderer (RenderListBox) otherwise its size won't follow the changed content.

Test: fast/transforms/listbox-zoom.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::didRecalcStyle):
* html/HTMLSelectElement.h:

LayoutTests:

A test with a zoomed listbox is added to check whether the styleChange is catched.

* fast/transforms/listbox-zoom.html: Added.
* fast/transforms/listbox-zoom-expected.txt: Added.

Canonical link: https://commits.webkit.org/140252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156766 268f45cc-cd09-0410-ab3c-d52691b4dbfc